# pota-browser

./: .gitignore  Cargo.toml  chrome_profiles.json  fingerprints.json  proxy_config.json  readme.md
.github/workflows/: take_screenshot.yml
docs/: Spoofing things.md  Usefull chromium args.md
src/: adwebsocket.rs.old  chrome.rs  chrome.rs.old  chromium.rs  fingerprint_manager.rs  main.rs  proxy_manager.rs  proxy_server.rs  websocket.rs
src/chromium/: cdp.rs  chromium.rs  chromium_manager.rs  driver.rs  mod.rs  websocket.rs
src/gui/: active_profiles_section.rs  custom_browser.rs  logger.rs  mod.rs  new_profile.rs  new_profile_section.rs  new_proxy.rs  profile_list_section.rs  profiles_list.rs  proxies_list.rs  proxy_manager_section.rs  render_util.rs  saved_proxies_section.rs  single_profile_section.rs
src/proxy/: mod.rs  proxy_manager.rs  proxy_server.rs  proxy_server.rs.old
