[package]
name = "pota_browser"
version = "0.1.0"
edition = "2021"

[[bin]]
name = "pota-browser"
path = "src/main.rs"

[dependencies]
#base64 = "0.22.1"
eframe = "0.30.0"
futures = "0.3.31"
#http = "1.3.1"
lazy_static = "1.5.0"
reqwest = { version = "0.12.12", features = ["json", "blocking"] }
rfd = "0.15.3"
serde = { version= "1.0.217", features = ["derive"] }
serde_json = "1.0.138"
tokio = { version = "1.43.0",  features = ["full"] }
tokio-socks = "0.5.2"
tungstenite = "0.26.1"
#url = "2.5.4"

[profile.dev]
debug = true
