[package]
name = "pota-browser"
version = "0.1.0"
edition = "2024"

[dependencies]
eframe = "0.31.1"
reqwest = { version = "0.12.12", features = ["json"]}
rfd = "0.15.3"
serde = { version = "1.0.219", features = ["derive"] }
serde_json = "1.0.140"
tokio = { version = "1" , features = ["full"] }
base64 = "0.22.1"
